fix overlap

--- a/sass/layout.scss
+++ b/sass/layout.scss
@@ -175,6 +175,7 @@ h1.author-title {
 
 h1.title {
     text-align: center;
+    margin: 0 1.5em;
 }
 
 h2 {
